compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__function_definition_snapshots@external.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: fn external main() -> void
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            8095934718272011788,
        ): Function(
            FunctionDefinition {
                id: ItemId(
                    8095934718272011788,
                ),
                func_id: None,
                visibility: Private,
                name: SymbolName {
                    namespace: None,
                    name: Named(
                        Identifier {
                            name: "main",
                            location: <internal>:12:16,
                        },
                    ),
                    location: <internal>:12:16,
                },
                parameters: [],
                type_parameters: TypeParameters {
                    inner: [],
                },
                return_type: Type {
                    id: ItemId(
                        9344623788042179276,
                    ),
                    name: SymbolName {
                        namespace: Some(
                            PathRoot {
                                segments: [],
                            },
                        ),
                        name: Named(
                            Identifier {
                                name: "void",
                                location: <internal>:22:26,
                            },
                        ),
                        location: <internal>:22:26,
                    },
                    type_params: [],
                    location: <internal>:22:26,
                },
                block: None,
                location: <internal>:0:26,
            },
        ),
    },
    statements: {},
    expressions: {},
}
