compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__function_definition_snapshots@namespaced_type.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn main() -> std::Int32 {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            18378013473329591206,
        ): Function(
            FunctionDefinition {
                id: ItemId(
                    18378013473329591206,
                ),
                func_id: None,
                visibility: Private,
                name: Path {
                    root: [],
                    name: Type {
                        name: Identifier {
                            name: "main",
                            location: <internal>:3:7,
                        },
                        type_arguments: [],
                        location: <internal>:3:7,
                    },
                    location: <internal>:3:7,
                },
                parameters: [],
                type_parameters: TypeParameters {
                    inner: [],
                },
                return_type: Type {
                    id: ItemId(
                        6143724420395906933,
                    ),
                    name: Path {
                        root: [
                            Namespace {
                                name: Identifier {
                                    name: "std",
                                    location: <internal>:13:16,
                                },
                            },
                        ],
                        name: Type {
                            name: Identifier {
                                name: "Int32",
                                location: <internal>:18:23,
                            },
                            type_arguments: [],
                            location: <internal>:18:25,
                        },
                        location: <internal>:18:25,
                    },
                    location: <internal>:18:25,
                },
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:24:26,
                    },
                ),
                location: <internal>:0:26,
            },
        ),
    },
    statements: {},
    expressions: {},
}
