compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__function_definition_snapshots@no_return_type.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn main() {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId {
            package: PackageId(
                0,
            ),
            index: Idx(
                1,
            ),
        }: Function(
            FunctionDefinition {
                id: ItemId {
                    package: PackageId(
                        0,
                    ),
                    index: Idx(
                        1,
                    ),
                },
                func_id: None,
                visibility: Private,
                name: Path {
                    root: [],
                    name: Type {
                        name: Identifier {
                            name: "main",
                            location: <internal>:3:7,
                        },
                        type_arguments: [],
                        location: <internal>:3:7,
                    },
                    location: <internal>:3:7,
                },
                parameters: [],
                type_parameters: TypeParameters {
                    inner: [],
                },
                return_type: Type {
                    id: ItemId {
                        package: PackageId(
                            0,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "Void",
                                location: <internal>:0:0,
                            },
                            type_arguments: [],
                            location: <internal>:0:0,
                        },
                        location: <internal>:0:0,
                    },
                    location: <internal>:0:0,
                },
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:10:12,
                    },
                ),
                location: <internal>:0:12,
            },
        ),
    },
    statements: {},
    expressions: {},
}
