compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__function_definition_snapshots@parameter.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn main(argc: u8) -> void { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            18378013473329591206,
        ): Function(
            FunctionDefinition {
                id: ItemId(
                    18378013473329591206,
                ),
                func_id: None,
                visibility: Private,
                name: Path {
                    root: [],
                    name: Type {
                        name: Identifier {
                            name: "main",
                            location: <internal>:3:7,
                        },
                        type_arguments: [],
                        location: <internal>:3:7,
                    },
                    location: <internal>:3:7,
                },
                parameters: [
                    Parameter {
                        index: 0,
                        name: Identifier {
                            name: "argc",
                            location: <internal>:8:12,
                        },
                        param_type: Type {
                            id: ItemId(
                                16901111566601906630,
                            ),
                            name: Path {
                                root: [],
                                name: Namespace {
                                    name: Identifier {
                                        name: "u8",
                                        location: <internal>:14:16,
                                    },
                                },
                                location: <internal>:14:16,
                            },
                            location: <internal>:14:16,
                        },
                        vararg: false,
                        location: <internal>:8:16,
                    },
                ],
                type_parameters: TypeParameters {
                    inner: [],
                },
                return_type: Type {
                    id: ItemId(
                        17666474489655347949,
                    ),
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "void",
                                location: <internal>:21:25,
                            },
                            type_arguments: [],
                            location: <internal>:21:25,
                        },
                        location: <internal>:21:25,
                    },
                    location: <internal>:21:25,
                },
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:26:29,
                    },
                ),
                location: <internal>:0:29,
            },
        ),
    },
    statements: {},
    expressions: {},
}
