compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__function_definition_snapshots@parameters.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn main(argc: u8, arcv: [String]) -> void { }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            18378013473329591206,
        ): Function(
            FunctionDefinition {
                id: ItemId(
                    18378013473329591206,
                ),
                func_id: None,
                visibility: Private,
                name: Path {
                    root: [],
                    name: Type {
                        name: Identifier {
                            name: "main",
                            location: <internal>:3:7,
                        },
                        type_arguments: [],
                        location: <internal>:3:7,
                    },
                    location: <internal>:3:7,
                },
                parameters: [
                    Parameter {
                        name: Identifier {
                            name: "argc",
                            location: <internal>:8:12,
                        },
                        param_type: Type {
                            id: ItemId(
                                16901111566601906630,
                            ),
                            name: Path {
                                root: [],
                                name: Namespace {
                                    name: Identifier {
                                        name: "u8",
                                        location: <internal>:14:16,
                                    },
                                },
                                location: <internal>:14:16,
                            },
                            location: <internal>:14:16,
                        },
                        vararg: false,
                        location: <internal>:8:16,
                    },
                    Parameter {
                        name: Identifier {
                            name: "arcv",
                            location: <internal>:18:22,
                        },
                        param_type: Type {
                            id: ItemId(
                                4790521336387713921,
                            ),
                            name: Path {
                                root: [
                                    Namespace {
                                        name: Identifier {
                                            name: "std",
                                            location: <internal>:0:0,
                                        },
                                    },
                                ],
                                name: Type {
                                    name: Identifier {
                                        name: "Array",
                                        location: <internal>:0:0,
                                    },
                                    type_arguments: [
                                        Type {
                                            id: ItemId(
                                                8008751949105636900,
                                            ),
                                            name: Path {
                                                root: [
                                                    Type {
                                                        name: Identifier {
                                                            name: "std",
                                                            location: <internal>:0:0,
                                                        },
                                                        type_arguments: [],
                                                        location: <internal>:0:0,
                                                    },
                                                ],
                                                name: Type {
                                                    name: Identifier {
                                                        name: "String",
                                                        location: <internal>:0:0,
                                                    },
                                                    type_arguments: [],
                                                    location: <internal>:0:0,
                                                },
                                                location: <internal>:0:0,
                                            },
                                            location: <internal>:25:32,
                                        },
                                    ],
                                    location: <internal>:24:32,
                                },
                                location: <internal>:24:32,
                            },
                            location: <internal>:24:32,
                        },
                        vararg: false,
                        location: <internal>:18:32,
                    },
                ],
                type_parameters: TypeParameters {
                    inner: [],
                },
                return_type: Type {
                    id: ItemId(
                        17666474489655347949,
                    ),
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "void",
                                location: <internal>:37:41,
                            },
                            type_arguments: [],
                            location: <internal>:37:43,
                        },
                        location: <internal>:37:43,
                    },
                    location: <internal>:37:43,
                },
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:42:45,
                    },
                ),
                location: <internal>:0:45,
            },
        ),
    },
    statements: {},
    expressions: {},
}
