compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__function_definition_snapshots@pub_modifier.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "pub fn main() -> void {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            8095934718272011788,
        ): Function(
            FunctionDefinition {
                id: ItemId(
                    8095934718272011788,
                ),
                func_id: None,
                visibility: Public,
                name: SymbolName {
                    namespace: None,
                    name: Named(
                        Identifier {
                            name: "main",
                            location: <internal>:7:11,
                        },
                    ),
                    location: <internal>:7:11,
                },
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        id: ItemId(
                            9344623788042179276,
                        ),
                        name: SymbolName {
                            namespace: Some(
                                PathRoot {
                                    segments: [],
                                },
                            ),
                            name: Named(
                                Identifier {
                                    name: "void",
                                    location: <internal>:17:21,
                                },
                            ),
                            location: <internal>:17:21,
                        },
                        type_params: [],
                        location: <internal>:17:21,
                    },
                ),
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:22:24,
                    },
                ),
                location: <internal>:0:24,
            },
        ),
    },
    statements: {},
    expressions: {},
}
