compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__function_definition_snapshots@reserved_keyword.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn loop() -> void {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            10420111648834899420,
        ): Function(
            FunctionDefinition {
                id: ItemId(
                    10420111648834899420,
                ),
                func_id: None,
                visibility: Private,
                name: SymbolName {
                    namespace: None,
                    name: Named(
                        Identifier {
                            name: "loop",
                            location: <internal>:3:7,
                        },
                    ),
                    location: <internal>:3:7,
                },
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        id: ItemId(
                            2745571829241957363,
                        ),
                        name: SymbolName {
                            namespace: Some(
                                PathRoot {
                                    segments: [],
                                },
                            ),
                            name: Named(
                                Identifier {
                                    name: "void",
                                    location: <internal>:13:17,
                                },
                            ),
                            location: <internal>:13:17,
                        },
                        type_params: [],
                        location: <internal>:13:17,
                    },
                ),
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:18:20,
                    },
                ),
                location: <internal>:0:20,
            },
        ),
    },
    statements: {},
    expressions: {},
}
