compiler/lume_hir_lower/src/snapshots/lume_hir_lower__tests__function_definition_snapshots@statement.snap
---
source: compiler/lume_hir_lower/src/tests.rs
description: "fn main() -> void { let a = 0; }"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        ItemId(
            18378013473329591206,
        ): Function(
            FunctionDefinition {
                id: ItemId(
                    18378013473329591206,
                ),
                func_id: None,
                visibility: Private,
                name: Path {
                    root: [],
                    name: Type {
                        name: Identifier {
                            name: "main",
                            location: <internal>:3:7,
                        },
                        type_arguments: [],
                        location: <internal>:3:7,
                    },
                    location: <internal>:3:7,
                },
                parameters: [],
                type_parameters: TypeParameters {
                    inner: [],
                },
                return_type: Type {
                    id: ItemId(
                        17666474489655347949,
                    ),
                    name: Path {
                        root: [],
                        name: Type {
                            name: Identifier {
                                name: "void",
                                location: <internal>:13:17,
                            },
                            type_arguments: [],
                            location: <internal>:13:19,
                        },
                        location: <internal>:13:19,
                    },
                    location: <internal>:13:19,
                },
                block: Some(
                    Block {
                        statements: [
                            Statement {
                                id: StatementId {
                                    def: ItemId(
                                        18378013473329591206,
                                    ),
                                    index: Idx(
                                        0,
                                    ),
                                },
                                kind: Variable(
                                    VariableDeclaration {
                                        id: StatementId {
                                            def: ItemId(
                                                18378013473329591206,
                                            ),
                                            index: Idx(
                                                0,
                                            ),
                                        },
                                        name: Identifier {
                                            name: "a",
                                            location: <internal>:24:25,
                                        },
                                        declared_type: None,
                                        value: Expression {
                                            id: ExpressionId {
                                                def: ItemId(
                                                    18378013473329591206,
                                                ),
                                                index: Idx(
                                                    1,
                                                ),
                                            },
                                            location: <internal>:28:29,
                                            kind: Literal(
                                                Literal {
                                                    id: ExpressionId {
                                                        def: ItemId(
                                                            18378013473329591206,
                                                        ),
                                                        index: Idx(
                                                            1,
                                                        ),
                                                    },
                                                    location: <internal>:28:29,
                                                    kind: Int(
                                                        IntLiteral {
                                                            id: ExpressionId {
                                                                def: ItemId(
                                                                    18378013473329591206,
                                                                ),
                                                                index: Idx(
                                                                    1,
                                                                ),
                                                            },
                                                            value: 0,
                                                            kind: I32,
                                                        },
                                                    ),
                                                },
                                            ),
                                        },
                                    },
                                ),
                                location: <internal>:20:30,
                            },
                        ],
                        location: <internal>:18:32,
                    },
                ),
                location: <internal>:0:32,
            },
        ),
    },
    statements: {
        StatementId {
            def: ItemId(
                18378013473329591206,
            ),
            index: Idx(
                0,
            ),
        }: Statement {
            id: StatementId {
                def: ItemId(
                    18378013473329591206,
                ),
                index: Idx(
                    0,
                ),
            },
            kind: Variable(
                VariableDeclaration {
                    id: StatementId {
                        def: ItemId(
                            18378013473329591206,
                        ),
                        index: Idx(
                            0,
                        ),
                    },
                    name: Identifier {
                        name: "a",
                        location: <internal>:24:25,
                    },
                    declared_type: None,
                    value: Expression {
                        id: ExpressionId {
                            def: ItemId(
                                18378013473329591206,
                            ),
                            index: Idx(
                                1,
                            ),
                        },
                        location: <internal>:28:29,
                        kind: Literal(
                            Literal {
                                id: ExpressionId {
                                    def: ItemId(
                                        18378013473329591206,
                                    ),
                                    index: Idx(
                                        1,
                                    ),
                                },
                                location: <internal>:28:29,
                                kind: Int(
                                    IntLiteral {
                                        id: ExpressionId {
                                            def: ItemId(
                                                18378013473329591206,
                                            ),
                                            index: Idx(
                                                1,
                                            ),
                                        },
                                        value: 0,
                                        kind: I32,
                                    },
                                ),
                            },
                        ),
                    },
                },
            ),
            location: <internal>:20:30,
        },
    },
    expressions: {
        ExpressionId {
            def: ItemId(
                18378013473329591206,
            ),
            index: Idx(
                1,
            ),
        }: Expression {
            id: ExpressionId {
                def: ItemId(
                    18378013473329591206,
                ),
                index: Idx(
                    1,
                ),
            },
            location: <internal>:28:29,
            kind: Literal(
                Literal {
                    id: ExpressionId {
                        def: ItemId(
                            18378013473329591206,
                        ),
                        index: Idx(
                            1,
                        ),
                    },
                    location: <internal>:28:29,
                    kind: Int(
                        IntLiteral {
                            id: ExpressionId {
                                def: ItemId(
                                    18378013473329591206,
                                ),
                                index: Idx(
                                    1,
                                ),
                            },
                            value: 0,
                            kind: I32,
                        },
                    ),
                },
            ),
        },
    },
}
